--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,6 @@ uvicorn==0.17.6
 watchgod==0.8.1
 websocket-client==1.3.2
 websockets==10.2
+psycopg2-binary==2.9.3
+SQLAlchemy==1.4.35
+alembic==1.7.7
